--- a/components/Tabs/Tabs.wxml
+++ b/components/Tabs/Tabs.wxml
@@ -1,11 +1,7 @@
 <!--components/Tabs/Tabs.wxml-->
 <view class="tabs">
     <view class="tabs_title">
-        <!-- <view class="title_item active" >首页</view>
-        <view class="title_item">原创</view>
-        <view class="title_item">分类</view>
-        <view class="title_item">关于</view> -->
-        <view wx:for="{{tabs}}" wx:key="id" class="title_item">{{item.name}}</view>
+        <view wx:for="{{tabs}}" wx:key="id" class="title_item {{item.isActive?'active':''}}">{{item.name}}</view>
     </view>
     <view class="tabs_content"></view>
 </view>
