--- a/components/Tabs/Tabs.wxss
+++ b/components/Tabs/Tabs.wxss
@@ -1,1 +1,27 @@
 /* components/Tabs/Tabs.wxss */
+/* pages/demo17/demo17.wxss */
+.tabs{
+    
+}
+
+.tabs_title{
+    display: flex;/*伸缩*/
+    padding: 10rpx 0;
+
+}
+
+.title_item{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.tabs_content{
+    
+}
+
+.active{
+    color:red;
+    border-bottom: 5rpx solid currentColor;
+}
